# 02_DATA_ANALYSIS_AGENT

./: .gitignore  README.md  init.sh  pyproject.toml
demo/: demo.md
src/: cli_main.py  main.py  main_interactive.py
src/agent/: root_agent.py
src/common/: base_agent.py  config.yaml
src/subagents/: analysis_agent.py  sql_agent.py
src/tools/: analysis_tool.py  analysis_tool2.py  load_df.py  schema_infer_tool.py  semantic_extraction_tool.py  sql_tool.py
src/utils/: agent_spinner_run.py  db_connection.py  get_config.py  logger.py  spinner_decorator.py
